k8s/kafka-ui/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  labels:
    app: kafka-ui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "traefik"
  rules:
  - host: javakafka.kafka-ui.marceloagmelo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-service
            port:
              number: 8080
